--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget2/base-tables-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget2/base-tables-widget2.component.html
@@ -67,8 +67,8 @@
     </div>
   </div>
 
-  <div class="table-responsive mb-0">
-    <table class="table table-centered table-nowrap">
+  <div class="table-responsive mb-0" style="overflow: visible;">
+    <table class="table table-centered">
       <thead class="table-light">
         <tr>
           <th></th>
