--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget3/mixed-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget3/mixed-widget3.component.html
@@ -10,7 +10,7 @@
           <div class="col-lg-2">
             <label for="example-text-input" class="col-form-label"><b>Date</b></label>
           </div>
-          <div class="col-lg-8">
+          <div class="col-sm-9">
             <input class="form-control" placeholder="DD-MM-YYYY" name="startDate" (click)="endDate.toggle()" readonly
               style="background-color: #ffffff;" #myinput formControlName="estimatedRefuelDate" ngbDatepicker
               #endDate="ngbDatepicker">
@@ -35,7 +35,7 @@
             <div class="col-lg-2">
               <label for="example-text-input" class="col-form-label"><b>Khata</b></label>
             </div>
-            <div class="col-lg-8">
+            <div class="col-sm-9">
               <input class="form-control" type="text" list="corporateList" placeholder="Select Khata"
                 formControlName="selectedCorp" (change)="getDetailsByfuelDealerCustomerMapIdId($event)">
               <datalist id="corporateList">
