--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget9/tiles-widget9.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget9/tiles-widget9.component.html
@@ -443,7 +443,7 @@
                                 </ng-template>
 
                             </table>
-                            <table id="excel-table" *ngIf="!isUpdateCol" class="table table-centered table-nowrap">
+                            <table id="excel-table" *ngIf="!isUpdateCol" class="table table-centered">
                                 <thead>
                                     <tr>
                                         <th style="text-align: left;"><b> Date </b></th>
