--- a/src/app/modules/auth/components/home/home.component.html
+++ b/src/app/modules/auth/components/home/home.component.html
@@ -1,7 +1,7 @@
 <style>
-html {
-  scroll-behavior: smooth;
-}
+  html {
+    scroll-behavior: smooth;
+  }
 </style>
 
 <!DOCTYPE html>
@@ -50,13 +50,13 @@ html {
 
     <!-- ======= Hero Section ======= -->
     <section id="hero">
-      <div class="hero-container" data-aos="fade-up">      
+      <div class="hero-container" data-aos="fade-up">
         <img width="100%" src="../../../../assets/images/home/36825478_s.png" alt="">
       </div>
     </section><!-- End Hero -->
 
     <!-- ======= Header ======= -->
-    <header id="header" class="d-flex align-items-center sticky-header"  style="background-color: black; height: 80px;">
+    <header id="header" class="d-flex align-items-center sticky-header" style="background-color: black; height: 80px;">
       <div class="container d-flex align-items-center justify-content-between">
 
         <div class="logo">
@@ -68,57 +68,66 @@ html {
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto active" style="font-size: 20px;" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto " style="font-size: 20px;"  href="/auth/about">About</a></li>
-            <li><a class="nav-link " style="font-size: 20px;"  href="/auth/login">Login</a></li>
+            <li><a class="nav-link scrollto " style="font-size: 20px;" href="#about">About</a></li>
+            <li><a class="nav-link " style="font-size: 20px;" href="/auth/login">Login</a></li>
             <li><a class="nav-link " style="font-size: 20px;" href="/auth/signUp">Sign Up</a></li>
-            <!-- <li><a class="nav-link scrollto" href="#services" style="font-size: 20px;">Services</a></li> -->
-            
-            <li><a class="nav-link scrollto"  style="font-size: 20px;"  href="/auth/contactUs">Contact Us</a></li>
+            <li><a class="nav-link scrollto" style="font-size: 20px;" href="#services">Services</a></li>
+
+            <li><a class="nav-link scrollto" style="font-size: 20px;" href="#contact1">Contact Us</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
 
       </div>
     </header><!-- End Header -->
-<br><br>
-<br>
+    <br><br>
+    <br>
     <main id="main">
 
       <!-- ======= About Section ======= -->
       <section id="about" class="about">
         <div class="container">
-          
+
           <div class="row">
             <div class="col-xl-12 pt-4 pt-lg-0 d-flex align-items-stretch">
               <div class="content d-flex flex-column justify-content-center" data-aos="fade-left">
                 <div class="row">
-                    <div class="col-md-1">
-                        <div class="bi bi-receipt" style="font-size: 40px; color: green;"></div>
-                    </div>
                   <div class="col-md-11 icon-box" data-aos="zoom-in" data-aos-delay="100">
                     <i class="bx bx-receipt"></i>
                     <h4>About Us</h4> <br>
-                    <p style="font-size: 17px; color: #212529;">When we design software, we design for every stakeholder.</p> <br>
-                    <p style="font-size: 17px; color: #212529;">We build software to fulfil two simple business goals -</p>
-                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;•  A business who extends credit expects that the customer pays back on time.</p>
-                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;•  A customer who takes credit pays by the due date when reminded respectfully.</p>
+                    <p style="font-size: 17px; color: #212529;">When we design software, we design for every
+                      stakeholder.</p> <br>
+                    <p style="font-size: 17px; color: #212529;">We build software to fulfil two simple business goals -
+                    </p>
+                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• A business who extends
+                      credit expects that the customer pays back on time.</p>
+                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• A customer who takes
+                      credit pays by the due date when reminded respectfully.</p>
                     <br>
-                    <p style="font-size: 17px; color: #212529;">Our software follows 3 simple design thinking principles</p>
+                    <p style="font-size: 17px; color: #212529;">Our software follows 3 simple design thinking principles
+                    </p>
                     <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. Simple to use</p>
                     <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. Connect all</p>
-                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3. Important Information first</p>
+                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3. Important Information
+                      first</p>
                     <br>
-                    <p style="font-size: 17px; color: #212529;">If your business is facing difficulties in managing their credit transactions with customers, 
+                    <p style="font-size: 17px; color: #212529;">If your business is facing difficulties in managing
+                      their credit transactions with customers,
                       including tracking credit utilization, generating statements and bills, timely collections and
                       reconciling payments, then do reach out to us.</p>
-                      <br>
+                    <br>
                     <p style="font-size: 17px; color: #212529;">Our software platform offer following features:</p>
-                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;•  User Management: Login, registration, profile management</p>
-                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;•  Credit Management: Track and manage credit transactions between gas stations and fleet customers,
-                                                        credit limit setting, credit utilization tracking</p>
-                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;•  Billing and Statement: Generate credit statements and bills, payment tracking and reconciliation</p>
-                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;•  Reports and Analytics: Generate reports and analytics on credit utilization and payment history</p>
-                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;•  Notifications and Reminders: Automated reminders for payment due, credit outstanding notifications</p>
+                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• User Management: Login,
+                      registration, profile management</p>
+                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Credit Management: Track
+                      and manage credit transactions between gas stations and fleet customers,
+                      credit limit setting, credit utilization tracking</p>
+                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Billing and Statement:
+                      Generate credit statements and bills, payment tracking and reconciliation</p>
+                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Reports and Analytics:
+                      Generate reports and analytics on credit utilization and payment history</p>
+                    <p style="font-size: 17px; color: #212529;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Notifications and
+                      Reminders: Automated reminders for payment due, credit outstanding notifications</p>
 
                   </div>
 
@@ -129,7 +138,7 @@ html {
         </div>
       </section><!-- End About Section -->
 
-      
+
       <!-- ======= Clients Section ======= -->
       <section id="clients" class="clients">
 
@@ -166,74 +175,79 @@ html {
 
           <div class="text-center" data-aos="zoom-in">
             <h3>PARTNER WITH US</h3>
-            <p style="color: black;"> We bring access to mobility business customers who are business focused and use credit responsibly.</p>
+            <p style="color: black;"> We bring access to mobility business customers who are business focused and use
+              credit responsibly.</p>
             <!-- <a class="cta-btn" href="#contact1">Contact</a> -->
             <ul>
-              <li><a class="nav-link scrollto"  style="font-size: 20px;"  href="/auth/contactUs">Contact Us</a></li>
+              <li><a class="nav-link scrollto" style="font-size: 20px;" href="/auth/contactUs">Contact Us</a></li>
             </ul>
           </div>
 
         </div>
       </section><!-- End Cta Section -->
 
-      
+
       <section id="services" class="services">
-        <div class="container" style="text-align: center;">
+        <div class="container">
           <div class="section-title" data-aos="fade-down">
-            <span class="text-shadow-example">Services</span>
-              <p style="font-size: 17px;">We offer digital solutions from software to payments for mobility businesses.</p> 
-              <p style="font-size: 17px;">If you are a petrol pump dealer, do try our FUELIN PLUS software to manage your business.</p>
-              <p style="font-size: 17px;">If you are a fleet business, do try our FUELIN CUSTOMER app to manage expenses better.</p>
-              <p style="font-size: 17px;">If you are a business who extends unsecured credit, do try our VISWASA chat app to collect faster. </p>
+            <span>Services</span>
+            <h2>Services</h2>
+              <p>We offer digital solutions from software to payments for mobility businesses.</p> 
+
+              <p>If you are a petrol pump dealer, do try our FUELIN PLUS software to manage your business.</p>
+              
+              <p>If you are a fleet business, do try our FUELIN CUSTOMER app to manage expenses better.</p>
+              
+              <p>If you are a business who extends unsecured credit, do try our VISWASA chat app to collect faster. </p>
           </div>
 
           <div class="row">
             <div class="col-md-6">
               <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-                <i class="bi bi-briefcase" style="color: #0ea5e0; font-size: 40px; text-align: justify;"></i>
-                <h4 style="text-align: justify;"><a>Adding Credit Purchases</a></h4>
-                <p style="text-align: justify;">Business owners will be able to add credit purchases made by customers by sending a message to the bot with the details of the purchase. 
+                <i class="bi bi-briefcase" style="color: #0ea5e0;"></i>
+                <h4><a>Adding Credit Purchases</a></h4>
+                <p>Business owners will be able to add credit purchases made by customers by sending a message to the bot with the details of the purchase. 
                   The bot will prompt the user to enter the customer’s name, vehicle license plate number, amount of the purchase, and the date of the purchase.</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-                <i class="bi bi-card-checklist" style="color: #07cc70;font-size: 40px;"></i>
-                <h4 style="text-align: justify;"><a>Viewing Credit Purchases:</a></h4>
-                <p style="text-align: justify;">Business owners will be able to view a list of all credit purchases made by  customers by sending a message to the bot with the command to view purchases. 
+                <i class="bi bi-card-checklist" style="color: #07cc70;"></i>
+                <h4><a>Viewing Credit Purchases:</a></h4>
+                <p>Business owners will be able to view a list of all credit purchases made by  customers by sending a message to the bot with the command to view purchases. 
                   The bot will display a list of all credit purchases, along with the customer’s name, vehicle license plate number, amount, and date of each purchase.</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-                <i class="bi bi-bar-chart" style="color: #e40373;font-size: 40px;"></i>
-                <h4 style="text-align: justify;"><a>Adding Credit Payments:</a></h4>
-                <p style="text-align: justify;">Business owners will be able to add credit payments made by  customers by sending a message to the bot with the details of the payment. 
+                <i class="bi bi-bar-chart" style="color: #e40373;"></i>
+                <h4><a>Adding Credit Payments:</a></h4>
+                <p>Business owners will be able to add credit payments made by  customers by sending a message to the bot with the details of the payment. 
                   The bot will prompt the user to enter the customer’s name, amount of the payment, and the date of the payment.
                 </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-                <i class="bi bi-binoculars" style="color: #f0b103; font-size: 40px;"></i>
-                <h4 style="text-align: justify;"><a>Viewing Credit Payments:</a></h4>
-                <p style="text-align: justify;">Business owners will be able to view a list of all credit payments made by  customers by sending a message to the bot with the command to view payments. 
+                <i class="bi bi-binoculars" style="color: #f0b103;"></i>
+                <h4><a>Viewing Credit Payments:</a></h4>
+                <p>Business owners will be able to view a list of all credit payments made by  customers by sending a message to the bot with the command to view payments. 
                   The bot will display a list of all credit payments, along with the customer’s name, amount, and date of each payment.</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
-                <i class="bi bi-brightness-high" style="color: #3145fa; font-size: 40px;"></i>
-                <h4 style="text-align: justify;"><a>Viewing Credit Ledgers:</a></h4>
-                <p style="text-align: justify;">Business owners will be able to view their credit ledger by sending a message to the bot with the command to view the ledger. 
+                <i class="bi bi-brightness-high" style="color: #3145fa;"></i>
+                <h4><a>Viewing Credit Ledgers:</a></h4>
+                <p>Business owners will be able to view their credit ledger by sending a message to the bot with the command to view the ledger. 
                   The bot will display the total credit purchases, payments, and outstanding credit balance for each customer and vehicle.</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="icon-box" data-aos="fade-up" data-aos-delay="600">
-                <i class="bi bi-calendar4-week" style="color: #a00098; font-size: 40px;"></i>
-                <h4 style="text-align: justify;"><a>Tracking Credit Outstanding:</a></h4>
-                <p style="text-align: justify;">Business owners will be able to track the credit outstanding against both customers and vehicles by sending a message to the bot with the command to track outstanding credit. 
+                <i class="bi bi-calendar4-week" style="color: #a00098;"></i>
+                <h4><a>Tracking Credit Outstanding:</a></h4>
+                <p>Business owners will be able to track the credit outstanding against both customers and vehicles by sending a message to the bot with the command to track outstanding credit. 
                   The bot will display the credit outstanding balance for each customer.</p>
               </div>
             </div>
@@ -246,7 +260,7 @@ html {
       <br><br>
       <!-- ======= Contact Us Section ======= -->
       <section id="contact1" class="contact">
-        <div class="container"style="text-align: center;">
+        <div class="container" style="text-align: center;">
 
           <div class="section-title" data-aos="fade-down">
             <h2 class="text-shadow-example">Contact Us</h2>
@@ -279,7 +293,7 @@ html {
             </div>
           </div>
 
-          <form class="mt-4" data-aos="fade-up" data-aos-delay="400">
+          <form [formGroup]="sendMessageForm" class="mt-4" data-aos="fade-up" data-aos-delay="400">
             <div class="row">
               <div class="col-md-6 form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
@@ -298,10 +312,10 @@ html {
               <textarea class="form-control" name="message" rows="5" placeholder="Message" formControlName="message"
                 required></textarea>
             </div>
-            
+
             <br>
-            <div class="text-center"><button type="submit" class="btn btn-success" style="background:#18d26e ;"
-                >Send Message</button></div>
+            <div class="text-center"><button type="submit" class="btn btn-success" style="background:#088743 ;"
+                (click)="sendMessage()">Send Message</button></div>
           </form>
 
         </div>
@@ -317,7 +331,7 @@ html {
         <div class="container" style="background-color: black">
           <div class="row">
             <div class="social-links mt-2">
-             
+
               <h3><b style="color: grey">
                   veels<span style="color: #4eb478;">Plus</span>
                 </b>
@@ -370,21 +384,22 @@ html {
                 <li><i class="bx bx-chevron-right"></i> <a
                     href="https://play.google.com/store/apps/details?id=com.veelsplus.viswasa"
                     target="_blank">viswasa</a></li>
-                
+
               </ul>
             </div>
 
-         
+
           </div>
         </div>
       </div>
 
       <div class="container py-4" style="background-color: black;">
         <div class="copyright">
-          <p style="color: grey">&copy; Copyright <strong><span style="color: grey">veelsPlus</span></strong>. All Rights Reserved</p>
+          <p style="color: grey">&copy; Copyright <strong><span style="color: grey">veelsPlus</span></strong>. All
+            Rights Reserved</p>
         </div>
         <div class="credits">
-         
+
         </div>
       </div>
     </footer><!-- End Footer -->
@@ -394,7 +409,7 @@ html {
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
- 
+
 
 </body>
 
