changes added by tejaswini

--- a/src/app/modules/auth/components/home/home.component.html
+++ b/src/app/modules/auth/components/home/home.component.html
@@ -69,8 +69,8 @@
           <ul>
             <li><a class="nav-link scrollto active" style="font-size: 20px;" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto " style="font-size: 20px;" href="#about">About</a></li>
-            <li><a class="nav-link " style="font-size: 20px;" href="/auth/login">Login</a></li>
-            <li><a class="nav-link " style="font-size: 20px;" href="/auth/signUp">Sign Up</a></li>
+            <li><a class="nav-link " style="font-size: 20px;" routerLink="/auth/login">Login</a></li>
+            <li><a class="nav-link " style="font-size: 20px;" routerLink="/auth/signUp">Sign Up</a></li>
             <li><a class="nav-link scrollto" style="font-size: 20px;" href="#services">Services</a></li>
 
             <li><a class="nav-link scrollto" style="font-size: 20px;" href="#contact1">Contact Us</a></li>
