--- a/src/app/pages/dealer/credit/view-account/view-account.component.html
+++ b/src/app/pages/dealer/credit/view-account/view-account.component.html
@@ -14,7 +14,7 @@
     <div class="text-sm-end">
         <label><b> Customer Advance </b> :</label>
         <span>
-            {{(advanceAmt) * (-1) }} CR
+            {{(advanceAmt) * (-1) | number: '1.2-2'}} CR
         </span>
     </div>
 </div>
